--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build: .
     ports:
       - 8000:8000
-    env_file:
-      - .env
+    volumes:
+      - cdn:/app/cdn
   mongodb:
     image: mongo:5.0
     ports:
@@ -16,3 +16,4 @@ services:
 
 volumes:
   data:
+  cdn:
