--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 HOST=0.0.0.0
 PORT=8000
 RELOAD=True
-MONGODB_CS=mongodb://localhost:27017
+MONGODB_CS=mongodb://mongodb:27017
 PETFINDER_API_KEY=B0GCYspEuWtd1hSmM2BFIZjERcpn5vd7y8Wel9oYPtttfeUF5v
 PETFINDER_CLIENT_SECRET=lJgMAaafUBm3trjk8dYfGeH0X0twOBnJpqfqNGWY
