fixed docker volume persistance issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,13 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - cdn:/app/cdn
+      - cdn:/app/cdn/photos
   mongodb:
     image: mongo:5.0
     ports:
       - 27017
     volumes:
-      - data:/mongo/data
+      - data:/data/db
 
 volumes:
   data:
