fixed hardcoded photo url - made the photo url being configured in the .env file

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ RELOAD=True
 MONGODB_CS=mongodb://mongodb:27017
 PETFINDER_API_KEY=B0GCYspEuWtd1hSmM2BFIZjERcpn5vd7y8Wel9oYPtttfeUF5v
 PETFINDER_CLIENT_SECRET=lJgMAaafUBm3trjk8dYfGeH0X0twOBnJpqfqNGWY
+CDN_HOST_URL_PREFIX=http://localhost:8000
